# uart2mqtt

./: LICENSE  Makefile  README.rst  pyproject.toml  tox.ini  uart2mqtt.service  uart2mqtt.toml.example
.github/: ISSUE_TEMPLATE.md
src/uart2mqtt/: __init__.py  uart2mqtt.py
