[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uart2mqtt"
version = "0.1.0"
description = "Shares all the serial ports on a system to an mqtt broker"
readme = "README.rst"
authors = [
  {name = "Mark Featherston", email = "mark@embeddedTS.com"}
]
maintainers = [
  {name = "Mark Featherston", email = "mark@embeddedTS.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/markfeathers/uart2mqtt/issues"
changelog = "https://github.com/markfeathers/uart2mqtt/blob/master/changelog.md"
homepage = "https://github.com/markfeathers/uart2mqtt"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]


[project.scripts]
uart2mqtt = "uart2mqtt.uart2mqtt:main"


# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

